[FIX] web: import model fix colors in dark mode
Prior to this commit, the background and the select inputs, in the import
file, were still white

This is a temporary fix, only for 16.0, to be dropped in 16.1, because
the import file was converted to owl in this version.
(cf: commit 0566b5f6bad1ee34a6b63b3c8d05b7369276991d)

task-3113726

--- a/addons/base_import/static/src/legacy/scss/base_import.scss
+++ b/addons/base_import/static/src/legacy/scss/base_import.scss
@@ -191,7 +191,7 @@
             background-repeat: no-repeat;
             appearance: none;
             width: auto;
-            background-color: white;
+            background-color: $o-white;
         }
 
         .select2-arrow {
